@@ -1,3 +1,9 @@
+2017-09-23 (0.12.10)
+	ANDROID: Fix crash when displaying an alert with extended ascii chars
+
+2017-09-22 (0.12.10)
+	SDL: Fix cursor error position when running from selected text
+
 2017-09-09 (0.12.10)
 	SDL: Moved "Live edit" mode to editor via F8 key
 
